# teaching_tools

./: README.md
teaching_bringup/: CMakeLists.txt  README.md  package.xml
teaching_bringup/config/: bringup.rviz
teaching_bringup/launch/: meca_bringup.launch.py  panda_bringup.launch.py  ur_bringup.launch.py
teaching_bringup/meshes/: cube.stl  machine.stl  rsp.stl  slab.stl  svt.stl
teaching_bringup/robots/ursim10e/: general.json
teaching_bringup/scenario/meca500/: ghost_meca_base_link.json  ghost_svt_tcp.json
teaching_bringup/scenario/panda/: ghost_panda_link0.json  ghost_svt_tcp.json
teaching_bringup/scenario/ur10e/: ghost_base_link.json  ghost_rsp.json  ghost_rsp_tool0.json  ghost_svt.json  ghost_svt_tcp.json
teaching_ghost/: CMakeLists.txt  Cargo.toml  package.xml
teaching_ghost/src/: teaching_ghost.rs
teaching_ghost_marker/: README.md  package.xml  setup.cfg  setup.py
teaching_ghost_marker/teaching_ghost_marker/: teaching_ghost_marker.py
teaching_marker/: README.md  package.xml  setup.cfg  setup.py
teaching_marker/teaching_marker/: teaching_marker.py
teaching_tfbc/: CMakeLists.txt  Cargo.toml  package.xml
teaching_tfbc/src/: broadcaster.rs
