[package]
name = "teaching_ghost"
version = "0.1.0"
authors = ["Endre Erős <endree@chalmers.se>"]
edition = "2021"

[dependencies]
r2r = "0.6.2"
futures = "0.3.15"
tokio = { version = "1", features = ["full"] }
#serde = "1.0.130"
#chrono = "0.4.19"
tempfile = "3.3.0"
k = "0.27.1"

[[bin]]
name = "teaching_ghost"
path = "src/teaching_ghost.rs"